<resources>
    <string name="app_name">MotionDesk</string>
    <string name="app_full_name">MotionDesk - Live Wallpapers</string>
    <string name="title_lib">Библиотека</string>
    <string name="title_browse">Поиск</string>
    <string name="title_profile">Профиль</string>
    <string name="add_wallpapers">Создать</string>
    <string name="new_wallpaper_type">Новый проект:</string>
    <string name="scene_2d">2D Сцена</string>
    <string name="scene_3d">3D Сцена</string>
    <string name="web_wallpapers">Web обои</string>
    <string name="gif_pic_wallpapers">GIF/Фото</string>
    <string name="search_wallpapers">Поиск обоев</string>
    <string name="edit_profile">Редактировать профиль</string>
    <string name="settings">Настройки</string>
    <string name="apply">Применить</string>
    <string name="stop">Остановить</string>
    <string name="new_layer">Новый слой</string>
    <string name="add">Добавить</string>
    <string name="layer">Слои</string>
    <string name="information">Информация</string>
    <string name="parameters">Параметры</string>
    <string name="effects">Эффекты</string>
    <string name="remove">Удалить</string>
    <string name="layers">Слои</string>
    <string name="resume">Возобновить</string>
    <string name="save_before_exit">Сохранить проект перед выходом?</string>
    <string name="unsaved_data_remove">Несохранённые данные будут утеряны навсегда.</string>
    <string name="no">Нет</string>
    <string name="yes">Да</string>
    <string name="choose_image">Выберите картинку</string>
    <string name="back">Назад</string>
    <string name="mask">Маска</string>
    <string name="center_obj">В центр</string>
    <string name="brush">Кисть</string>
    <string name="negative">Отразить</string>
    <string name="instrumentGettingError">Ошибка получения действия инструмента. Попробуйте перезапустить редактор.</string>
    <string name="y">Y</string>
    <string name="x">X</string>
    <string name="z">Z</string>
    <string name="position">Позиция</string>
    <string name="width">Ширина</string>
    <string name="height">Высота</string>
    <string name="rotation">Поворот</string>
    <string name="scale">Масштаб</string>
    <string name="cancel">Отмена</string>
    <string name="errorEmptyFields">Имеются пустые поля, невозможно сохранить.</string>
    <string name="loading">Загрузка</string>
    <string name="error_getting_data">Ошибка при получении данных объекта</string>
    <string name="name">Название</string>
    <string name="save">Сохранить</string>
    <string name="description">Описание</string>
    <string name="saving_project_error">Произошла ошибка при сохранении проекта</string>
    <string name="age_rating">Возрастное ограничение</string>
    <string name="restriction_for_all">Для всех</string>
    <string name="restriction_16">16+</string>
    <string name="restriction_18">18+</string>
    <string name="new_tag">Новый тег</string>
    <string name="fields_filling_error">Поля заполнены неверно</string>
    <string name="enter_name">Введите название</string>
    <string name="creation_imagination">Придумайте хорошее название для ваших обоев. Оно может отображать персонажей/стиль/произведение и т.д.</string>
    <string name="creation_left_empty_fields">Оставьте поля пустыми, чтобы выбрать разрешение вашего экрана</string>
    <string name="parallax">Параллакс</string>
    <string name="opacity">Прозрачность</string>
    <string name="you">Вы</string>
    <string name="swaying">Колебание</string>
    <string name="shake">Тряска</string>
    <string name="windy_swings">Ветреные колебания</string>
    <string name="glitch">Помехи</string>
    <string name="error_creating_editor">Ошибка создания конструктора</string>
    <string name="tags">Теги:</string>
    <string name="speed">Скорость</string>
    <string name="amount">Величина</string>
    <string name="softening_count">Количество смягчения</string>
    <string name="softening_alpha">Сила смягчения</string>
    <string name="amount_x">Значение по X</string>
    <string name="amount_Y">Значение по Y</string>
    <string name="effect_appbar_letter">"Э: "</string>
    <string name="object_appbar_letter">"O: "</string>
    <string name="choose_effect">Выберите эффект</string>
    <string name="error_adding_effect">Ошибка добавления эффекта</string>
    <string name="error_image_import">Ошибка импорта изображения</string>
    <string name="error_environment_setup">Ошибка подготовки окружения</string>
    <string name="error_start_preview">Ошибка сборки проекта</string>
    <string name="scene_parameters">Параметры сцены</string>
    <string name="choose_color">Выберите цвет:</string>
    <string name="choose">Выбрать</string>
    <string name="pause">Пауза</string>
    <string name="background_color">Цвет фона</string>
    <string name="description_colon">Описание:</string>
    <string name="to_preview_save_once">Для предпросмотра сохраните проект хотя бы раз</string>
    <string name="empty">Пусто</string>
</resources>