<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation2"
    app:startDestination="@+id/navigation_lib">

    <fragment
        android:id="@+id/navigation_lib"
        android:name="ru.ptrff.lwu.ui.home.HomeFragment"
        android:label="@string/title_lib"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_browse"
        android:name="ru.ptrff.lwu.ui.dashboard.DashboardFragment"
        android:label="@string/title_browse"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/navigation_profile"
        android:name="ru.ptrff.lwu.ui.notifications.NotificationsFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_notifications" />
</navigation>